# openapi-schema-validator

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.rst  Makefile  README.rst  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-docs.yml  docs-build.yml  python-publish.yml  python-test.yml  python-tests.yml
benchmarks/: cases.py  compare.py  run.py
docs/: conf.py  contributing.rst  format.rst  index.rst  manifest.json  references.rst  validation.rst
docs/_templates/: layout.html
openapi_schema_validator/: __init__.py  _caches.py  _dialects.py  _format.py  _keywords.py  _regex.py  _specifications.py  _types.py  _validators.py  settings.py  shortcuts.py  validators.py
openapi_schema_validator/schemas/oas3.2/dialect/: 2025-09-17.json
openapi_schema_validator/schemas/oas3.2/meta/: 2025-09-17.json
tests/: test_suite.py
tests/integration/: test_validators.py
tests/unit/: test_settings.py  test_shortcut.py
