[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source =["openapi_schema_validator"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
files = "openapi_schema_validator"
strict = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rfc3339_validator"
ignore_missing_imports = true

[tool.poetry]
name = "openapi-schema-validator"
version = "0.4.2"
description = "OpenAPI schema validation for Python"
authors = ["Artur Maciag <maciag.artur@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/p1c2u/openapi-schema-validator"
keywords = ["openapi", "swagger", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7.0"
jsonschema = "^4.0.0"
rfc3339-validator = {version = "*", optional = true}

[tool.poetry.extras]
rfc3339-validator = ["rfc3339-validator"]

[tool.poetry.dev-dependencies]
black = "^22.0.0"
isort = "^5.9.1"
pre-commit = "*"
pytest = "^6"
pytest-flake8 = "*"
pytest-cov = "*"
mypy = "^0.910"
flynt = "^0.76"

[tool.pytest.ini_options]
addopts = """
--capture=no
--verbose
--showlocals
--junitxml=reports/junit.xml
--cov=openapi_schema_validator
--cov-report=term-missing
--cov-report=xml
"""

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
