[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source =["openapi_schema_validator"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.deptry.per_rule_ignores]
DEP002 = ["rfc3339-validator"]

[tool.mypy]
files = "openapi_schema_validator"
strict = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema_specifications"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rfc3339_validator"
ignore_missing_imports = true

[tool.poetry]
name = "openapi-schema-validator"
version = "0.6.3"
description = "OpenAPI schema validation for Python"
authors = ["Artur Maciag <maciag.artur@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/python-openapi/openapi-schema-validator"
keywords = ["openapi", "swagger", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
include = [
    {path = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.8.0"
jsonschema = "^4.19.1"
rfc3339-validator = "*" # requred by jsonschema for date-time checker
jsonschema-specifications = ">=2023.5.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-immaterial"]

[tool.poetry.dev-dependencies]
black = "^24.4.0"
isort = "^5.13.2"
pre-commit = "*"
pytest = "^8"
pytest-flake8 = "*"
pytest-cov = "*"
mypy = "^1.10"
flynt = "^1.0"
deptry = "^0.16.2"
bump2version = "^1.0.1"

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.3,<8.0"
sphinx-immaterial = "^0.11.0"

[tool.pytest.ini_options]
addopts = """
--capture=no
--verbose
--showlocals
--junitxml=reports/junit.xml
--cov=openapi_schema_validator
--cov-report=term-missing
--cov-report=xml
"""

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
