[metadata]
name = openapi-schema-validator
description = OpenAPI schema validation for Python
long_description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = openapi, swagger, schema
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
packages = find:
zip_safe = False
test_suite = tests
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
setup_requires =
    setuptools
install_requires =
    isodate
    jsonschema>=3.0.0
    six
tests_require =
    mock; python_version<"3.0"
    pytest
    pytest-flake8
    pytest-cov

[options.extras_require]
rfc3339-validator = 
    rfc3339-validator
strict-rfc3339 =
    strict-rfc3339
isodate =
    isodate

[options.packages.find]
exclude =
    tests

[tool:pytest]
addopts = -sv --flake8 --junitxml reports/junit.xml --cov openapi_schema_validator --cov-report term-missing --cov-report xml:reports/coverage.xml
